--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=misopg1g1_micro-order
 sonar.organization=misopg1g1
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.coverage.exclusions=**test/**
+sonar.coverage.exclusions=**/*.module.ts, **/utils/**, **/*.controller.ts, **/*.resolver.ts, **/*.dto.ts, **/*.decorator.ts, **/*.guard.ts, **/*.interceptor.ts, **/jwt-strategy.ts, **/local-strategy.ts, **/main.ts, **/project-database-config.ts, **/auth.service.ts, **/*.enum.ts, src/healthcheck/*, src/shared/config/dbconfig.ts, **/*.spec.ts
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=ccp-frontend
 #sonar.projectVersion=1.0
