--- a/deployment.yaml
+++ b/deployment.yaml
@@ -50,6 +50,31 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 1
+        - name: consumer
+          image: ${REGISTRY_HOST}/${REGISTRY_SPACE}/consumer-${REPO_NAME}-${BRANCH_NAME}:latest
+          envFrom:
+            - secretRef:
+                name: ${REPO_NAME}-secrets
+          imagePullPolicy: Always
+          readinessProbe:
+            exec:
+              command:
+                - cat
+                - /app/liveness_probe
+            initialDelaySeconds: 10
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 1
+          livenessProbe:
+            exec:
+              command:
+                - cat
+                - /app/liveness_probe
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 1
         - name: ${REPO_NAME}-app
           image: ${REGISTRY_HOST}/${REGISTRY_SPACE}/${REPO_NAME}-${BRANCH_NAME}:latest
           envFrom:
